--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ar-vue-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "vite --config ./build/vite.base.config.js",
     "build:lib": "vue-tsc --noEmit && vite build --config ./build/vite.lib.config.js",
@@ -16,8 +16,10 @@
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.6",
     "@types/node": "^18.0.1",
     "@vitejs/plugin-vue": "^2.3.3",
+    "babel-loader": "^8.2.5",
     "fs-extra": "10.0.0",
     "handlebars": "4.7.7",
     "inquirer": "8.2.0",
@@ -28,6 +30,7 @@
     "vite-plugin-copy": "0.1.6",
     "vite-plugin-dts": "0.9.6",
     "vite-plugin-md": "0.11.4",
+    "vue-loader": "^16.8.3",
     "vue-tsc": "^0.34.7"
   }
 }
